--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "tp2dai",
+  "name": "pizza-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "description": "TP 01 de Ort",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Zheoden",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "msnodesqlv8": "^2.4.7",
+    "mssql": "^8.1.0"
   }
 }
